# Machine-Learning

./: README.md  pyproject.toml
learn/coursera/: NOTES.md  pyproject.toml
learn/coursera/advanced learning algorithms/: NOTES.md
learn/coursera/advanced learning algorithms/notebooks/Week 1/: C2_W1_Assignment.ipynb  C2_W1_Lab01_Neurons_and_Layers.ipynb  C2_W1_Lab02_CoffeeRoasting_TF.ipynb
learn/coursera/advanced learning algorithms/notebooks/Week 2/: C2_W2_Assignment.ipynb  C2_W2_Multiclass_TF.ipynb  C2_W2_Relu.ipynb  C2_W2_SoftMax.ipynb
learn/coursera/advanced learning algorithms/notebooks/Week 3/: C2_W3_Assignment.ipynb  utils.py
learn/coursera/advanced learning algorithms/notebooks/Week 4/: C2_W4_Decision_Tree_with_Markdown.ipynb  C2_W4_Lab_01_Decision_Trees.ipynb  C2_W4_Lab_02_Tree_Ensemble.ipynb
learn/coursera/generative ai with llms/: README.md
learn/coursera/generative ai with llms/notebooks/fine tuning/: Lab_2_fine_tune_generative_ai_model.ipynb
learn/coursera/generative ai with llms/notebooks/prompt eng/: Lab_1_summarize_dialogue.ipynb
learn/coursera/generative ai with llms/notebooks/rlhf/: Lab_3_fine_tune_model_to_detoxify_summaries.ipynb
learn/coursera/notebooks/Week 1/: Lab03_Cost_function.ipynb
learn/coursera/notebooks/Week 2/: Lab01_Python_Numpy_Vectorization.ipynb
learn/coursera/notebooks/Week 3/: C1_W3_Logistic_Regression.ipynb
learn/coursera/prompt engineering/: README.md
learn/coursera/regression and classification/: NOTES.md
projects/cervical_cancer_prediction/: pyproject.toml
(+7 files in other folders)
